--- a/week1/project/ecommerce/src/App.css
+++ b/week1/project/ecommerce/src/App.css
@@ -1,11 +1,10 @@
-/* src/index.css */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 
-h2 {
+h1 {
   margin-bottom: 1rem;
 }
 
@@ -18,10 +17,6 @@ li {
   display: inline-block;
   margin-right: 1rem;
   cursor: pointer;
-}
-
-li.active {
-  font-weight: bold;
 }
 
 .product-list {
@@ -49,20 +44,13 @@ li.active {
   margin: 0.5rem 0;
 }
 
-.product-card span {
-  font-weight: bold;
-}
-
-/* Responsive Styles */
-
 @media (max-width: 768px) {
-  .category-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  .product-list {
+    grid-gap: 0.5rem;
   }
 
-  .category-buttons button {
+  li {
+    margin-right: 0.5rem;
     margin-bottom: 0.5rem;
   }
 }
@@ -70,9 +58,6 @@ li.active {
 @media (max-width: 480px) {
   .product-list {
     grid-template-columns: 1fr;
-  }
-
-  .product-card {
-    max-width: 100%;
+    grid-gap: 0.5rem;
   }
 }
