--- a/week1/project/ecommerce/src/App.css
+++ b/week1/project/ecommerce/src/App.css
@@ -31,7 +31,8 @@ li {
 
 .product-card img {
   width: 100%;
-  max-height: 200px;
+  /* max-height: 200px; */
+  object-fit: cover;
 }
 
 .product-card h3 {
