Added some changes to make each product showing its details when the user click on it and added product file

--- a/week2/project/ecommerce/src/App.css
+++ b/week2/project/ecommerce/src/App.css
@@ -44,6 +44,10 @@ li {
   margin: 0.5rem 0;
 }
 
+.image-detail {
+  display: flex;
+  justify-content: center;
+}
 @media (max-width: 768px) {
   .product-list {
     grid-gap: 0.5rem;
